bad/bin_op_eq_bool_array.example_compiler_output
ERROR
[1mbad/bin_op_eq_bool_array.lat:3:7: [1;31merror: [0;1moperator == cannot compare values of types `boolean` and `int[]` because values are not convertible to either of the two types[m
	true == new int[3];
	     [1;32m^[m
